<resources>
    <string name="app_name">Magnet</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_result">ResultActivity</string>

    <string name="btn_search">搜索</string>

    <string name="hint_search">请输入关键字</string>

    <string name="radio_btn_ssbc">手撕包菜</string>
    <string name="radio_btn_bread">面包搜索</string>
    <string name="radio_btn_btIsland">BT岛</string>
</resources>
